security: finalize CORS and permit-all routing suite for April 10